--- a/packages/fields/package.json
+++ b/packages/fields/package.json
@@ -49,6 +49,7 @@
     "inflection": "^1.12.0",
     "intersection-observer": "^0.5.1",
     "is-hotkey": "^0.1.4",
+    "lodash.get": "^4.4.2",
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
     "lodash.omitby": "^4.6.0",
