--- a/packages/fields/package.json
+++ b/packages/fields/package.json
@@ -49,9 +49,11 @@
     "inflection": "^1.12.0",
     "intersection-observer": "^0.5.1",
     "is-hotkey": "^0.1.4",
+    "jest-diff": "^24.7.0",
     "lodash.get": "^4.4.2",
     "lodash.groupby": "^4.6.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.mergewith": "^4.6.1",
     "lodash.omitby": "^4.6.0",
     "luxon": "^1.11.4",
     "memoize-one": "^4.0.2",
